fix: advantages section margin fix on mobile

--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -237,6 +237,9 @@ $x-small: 420px;
     &__link {
       display: none;
     }
+    &__slider {
+      margin-bottom: unset;
+    }
     &__button {
       display: inline-block;
     }
